--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ target_sources(${PROJECT_NAME}.elf
         ${CMAKE_CURRENT_SOURCE_DIR}/bot_arm/bot_arm.c
         ${CMAKE_CURRENT_SOURCE_DIR}/l298n/l298n_driver.c
         ${CMAKE_CURRENT_SOURCE_DIR}/l298n/conveyor_device.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/K230_uart_dma/k230_uart_dma.c
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/delay/delay.h
         ${CMAKE_CURRENT_SOURCE_DIR}/PCA9685/PCA9685.h
@@ -87,6 +88,7 @@ target_sources(${PROJECT_NAME}.elf
         ${CMAKE_CURRENT_SOURCE_DIR}/bot_arm/bot_arm.h
         ${CMAKE_CURRENT_SOURCE_DIR}/l298n/l298n_driver.h
         ${CMAKE_CURRENT_SOURCE_DIR}/l298n/conveyor_device.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/K230_uart_dma/k230_uart_dma.h
 )
 
 target_include_directories(${PROJECT_NAME}.elf
@@ -96,6 +98,7 @@ target_include_directories(${PROJECT_NAME}.elf
         ${CMAKE_CURRENT_SOURCE_DIR}/user_main
         ${CMAKE_CURRENT_SOURCE_DIR}/bot_arm
         ${CMAKE_CURRENT_SOURCE_DIR}/l298n
+        ${CMAKE_CURRENT_SOURCE_DIR}/K230_uart_dma
 
 
 )
